Commit of Content/Sample Topics/ChangeLogoInSkin.htm

--- a/Content/Sample Topics/ChangeLogoInSkin.htm
+++ b/Content/Sample Topics/ChangeLogoInSkin.htm
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="571" MadCap:lastWidth="1114">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="611" MadCap:lastWidth="1603">
     <head>
         <link href="../Resources/TableStyles/KBTable2.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/Styles.css" rel="stylesheet" type="text/css" />
@@ -42,17 +42,7 @@
         </table>
         <h2>Summary</h2>
         <p>Describes how to edit the logo in the toolbar of the Standard WebHelp skin.</p>
-        <h2>Full Description:</h2>
-        <p>The logo for the HTML5 skin can be changed in the Skin Editor:</p>
-        <ol>
-            <li>In the Project Organizer, open the <b>Skins</b> folder.</li>
-            <li>Double-click the skin file.</li>
-            <li>On the left side of the Skin Editor, click the <b>Styles</b> tab.</li>
-            <li>Expand the <b>Logo</b> style.</li>
-            <li>Expand <b>Background</b>.</li>
-            <li>Click the button in the <b>Background Image</b> field and select an image.</li>
-            <li>Save the skin file.</li>
-        </ol>
+        <MadCap:snippetBlock src="../Resources/Snippets/NewSnippet.flsnp" />
         <h2>Attribution:</h2>
         <table style="width: 100%;caption-side: top;margin-left: 0;margin-right: auto;mc-table-style: url('../Resources/TableStyles/KBTable2.css');" summary="Last updated and author information" class="TableStyle-KBTable2" cellspacing="0">
             <col style="width: 33%;" class="TableStyle-KBTable2-Column-Column1" />
